--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ const tolerancesOff = {
   let maxGuesses = 20;
   let guessesMade = 0;
   let gameOver = false;
-  let nicheAllowed = true;
+  let nicheAllowed = false;
 
   async function loadCountries() {
     try {
