--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>AP HUG Wordle</title>
 <style>
+/*nice style*/
   body {
     font-family: Arial, sans-serif;
     max-width: 700px;
